fix overflowing content-classifications

--- a/res/less/components/content.less
+++ b/res/less/components/content.less
@@ -15,6 +15,10 @@
     line-height: 1;
     margin: 0;
     font-family: @font-family-headline;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    max-width: 100%;
+    overflow: hidden;
 
     .on-small-devices({
         font-size: 2.75rem;
